--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,7 +14,7 @@ jobs:
         uses: nwtgck/actions-netlify@v3.0
         with:
           publish-dir: './dist'
-          production-branch: master
+          production-branch: ${{ github.head_ref || github.ref_name }} 
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: false
