--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-checker": "^0.7.2"
   }
 }
