--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.419.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
